--- a/ProyectoInge1/ProyectoInge1/Views/Proyectos/Create.cshtml
+++ b/ProyectoInge1/ProyectoInge1/Views/Proyectos/Create.cshtml
@@ -37,6 +37,12 @@
         }
     }
 
+    var form = document.getElementById('descriptiveFormName');
+    form.elements.description1.onchange = function () {
+        var option = this.options[this.selectedIndex];
+        this.form.elements.descValue.value = option.value;
+        this.form.elements.descText.value = option.innerHTML;
+    }
 </script>
 @{
     ViewBag.Title = "Create";
@@ -55,108 +61,91 @@
    
     }
     <div class="form-horizontal">
-        <h4>Proyecto</h4>
-        <hr />
+    <h4>Proyecto</h4>
+    <hr />
 
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        <div class="form-group">
-            @Html.CustomLabelFor(model => model.proyecto.nombre, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.proyecto.nombre, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.proyecto.nombre, "", new { @class = "text-danger" })
-            </div>
+    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+    <div class="form-group">
+        @Html.CustomLabelFor(model => model.proyecto.nombre, htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            @Html.EditorFor(model => model.proyecto.nombre, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.ValidationMessageFor(model => model.proyecto.nombre, "", new { @class = "text-danger" })
         </div>
-        <div class="form-group">
-            @Html.CustomLabelFor(model => model.proyecto.descripcion, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.proyecto.descripcion, new { htmlAttributes = new { @class = "form-control", placeholder = "50 Carácteres máximo" } })
-                @Html.ValidationMessageFor(model => model.proyecto.descripcion, "", new { @class = "text-danger" })
-            </div>
+    </div>
+    <div class="form-group">
+        @Html.CustomLabelFor(model => model.proyecto.descripcion, htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            @Html.EditorFor(model => model.proyecto.descripcion, new { htmlAttributes = new { @class = "form-control", placeholder = "50 Carácteres máximo" } })
+            @Html.ValidationMessageFor(model => model.proyecto.descripcion, "", new { @class = "text-danger" })
         </div>
-        <div class="form-group">
-            @Html.CustomLabelFor(model => model.proyecto.fechaInicio, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.TextBoxFor(model => model.proyecto.fechaInicio, new { @class = "form-control datepicker", placeholder = "DATE" })
-            </div>
+    </div>
+    <div class="form-group">
+        @Html.CustomLabelFor(model => model.proyecto.fechaInicio, htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            @Html.TextBoxFor(model => model.proyecto.fechaInicio, new { @class = "form-control datepicker", placeholder = "DATE" })
         </div>
-        <div class="form-group">
-            @Html.CustomLabelFor(model => model.proyecto.fechaFinal, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.TextBoxFor(model => model.proyecto.fechaFinal, new { @class = "form-control datepicker2", placeholder = "DATE" })
-            </div>
+    </div>
+    <div class="form-group">
+        @Html.CustomLabelFor(model => model.proyecto.fechaFinal, htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            @Html.TextBoxFor(model => model.proyecto.fechaFinal, new { @class = "form-control datepicker2", placeholder = "DATE" })
         </div>
-        <br />
-        @*cajas de seleccion*@
-
-
-        <tr valign="top">
-            <td>&nbsp;&nbsp;&nbsp;</td>
-
-            <div>
-                <td>
-                    <div class="control-label col-md-2">
-                        Lider
-                        
-                    </div>
-                    <select class="control-label col-md-2" id="a" size="1"></select>
-                    <br/>
-                </td>
-                <div>
-                    <td valign="center">
-                        <a onclick="listbox_moveacross('a', 'd')" href="#">&gt;&gt;</a>
-                        <a onclick="listbox_moveacross('d', 'a')" href="#">&lt;&lt;</a>
-                    </td>
-                </div>
-            </div>
-                <div class = "control-label col-md-2">
-                    Desarrolladores
-                    <br />
-                </div>
-            <div>
-                <td>
-                    <select class="control-label col-md-2" id="s" size="10" multiple=""></select>
-                </td>
-            </div>
-            <div>
-                <td valign="center">
-                    <a onclick="listbox_moveacross('s', 'd')" href="#">&gt;&gt;</a>
-                    <a onclick="listbox_moveacross('d', 's')" href="#">&lt;&lt;</a>
-                </td>
-            </div>
-            <div>
-                <td>
-                    <select class="control-label col-md-2" id="d" size="10" multiple="">
-                        <option value="a">Afghanistan</option>
-                        <option value="b">Bahamas</option>
-
-                        @*Aqui se insertan los usuarios*@
-
-                    </select>
-                    <br/>
-                </td>
-            </div>
-        </tr>
-
-        @*Fin cajas de seleccion*@
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-5">
-                <input type="submit" value="Aceptar" class="btn btn-primary" />
-                <div class="form-actions no-color">
-                    <input type="submit" value="Eliminar" class="btn btn-default" />
-                    |
-                    @Html.ActionLink("Back to List", "Index")
-                </div>
-                <div class="btn btn-danger" style="color:white;" />
-                @Html.ActionLink("Cancelar", "Index", null, new { @style = "color:#FFFFFF;" })
-                 
-            </div>
-        </div>
-
-        <br/>  
+    </div>
+    <br />
+    @*cajas de seleccion*@
+    <div class="control-label">
+        @Html.CustomLabelFor(model => model.proyecto.lider, htmlAttributes: new { @class = "control-label col-md-2" })
+        <select name="Lider" type="text" class="form-control col-md-2" id="a" size="2"></select>        
+        <a class="pull-left" onclick="listbox_moveacross('d', 'a')" href="#">&lt;&lt;</a>
+        <br/>
+        <a class="pull-left" onclick="listbox_moveacross('a', 'd')" href="#">&gt;&gt;</a>
         
+    </div>
+        <br/><br/><br/>
+    <div>
+        <div class="control-label">
+            <label class="control-label col-md-2">Desarrollador</label>
 
+        </div>
+            <select class="form-control col-md-2" style="width:20em" id="s" size="10"></select>
+            
+      
+        <div>
+            
+            <br/>
+            <a onclick="listbox_moveacross('d', 's')" href="#">&lt;&lt;</a>
+            
+            <br/>
+            <a onclick="listbox_moveacross('s', 'd')" href="#">&gt;&gt;</a>
+        </div>
+        <div>
+            <select class="form-control col-md-2" style="width:20em; margin-left:2em;" id="d" size="10">
+
+                @*Aqui se insertan los usuarios*@
+                    @foreach (var item in Model.listaUsuarios)
+                    {
+                        <option value=item.Cedula>
+                            @Html.DisplayFor(modelItem => item.nombre)
+                            @Html.DisplayFor(modelItem => item.apellidos)
+                            @Html.Raw(" ")
+                        </option>
+                    }
+            </select>
+        </div>
+    </div>
+
+
+    @*Fin cajas de seleccion*@
+    <div class="form-group">
+        <div class=" col-md-8">
+            <input type="submit" value="Aceptar" class="btn btn-primary" />
+
+            <div class="btn btn-danger" style="color:white;" />
+            @Html.ActionLink("Cancelar", "Index", null, new { @style = "color:#FFFFFF;" })
+
+        </div>
+    </div>
 </div>
-}
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
 
