--- a/ProyectoInge1/ProyectoInge1/Views/Shared/_Layout.cshtml
+++ b/ProyectoInge1/ProyectoInge1/Views/Shared/_Layout.cshtml
@@ -32,8 +32,10 @@
                 <ul class="nav navbar-nav">
                     @if (Request.IsAuthenticated)
                     {
+
                        <li>@Html.ActionLink("Usuarios", "Index", "Usuarios")</li>
                        <li>@Html.ActionLink("Roles", "Index", "Roles")</li>
+                       <li>@Html.ActionLink("Proyectos", "Index", "Proyectos")</li>
                        <!--ESTE IF CONTIENE LOS AQUELLAS PESTAÑAS QUE SOLO UN ADMINISTRADOR PODRIA VER-->
                         /*string[] roles = Roles.GetRolesForUser();
                         foreach (string role in roles)
