--- a/ProyectoInge1/ProyectoInge1/Views/ReqFuncional/Create.cshtml
+++ b/ProyectoInge1/ProyectoInge1/Views/ReqFuncional/Create.cshtml
@@ -15,7 +15,13 @@
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <!--AGREGAR UN ID DE REQUERIMIENTO-->
-       
+        <div class="form-group">
+            <label class="control-label col-md-2">proyecto</label>
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.Requerimientos.id, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Requerimientos.id, "", new { @class = "text-danger" })
+            </div>
+        </div>
 
             <!--AGREGAR UN PROYECTO DE REQUERIMIENTO-->
             <div class="form-group">
@@ -194,6 +200,7 @@
             <div class="form-group">
                 <div class="col-md-offset-2 col-md-5">
                     <input type="submit" value="Aceptar" class="btn btn-primary" />
+                    @Html.ActionLink("Delete", "Create", null, new { modelo=Model.Requerimientos })
                     <div class="btn btn-danger" style="color:white;" />
                     @Html.ActionLink("Cancelar", "Index", null, new { @style = "color:#FFFFFF;" })
                 </div>
