--- a/ProyectoInge1/ProyectoInge1/Views/ReqFuncional/Create.cshtml
+++ b/ProyectoInge1/ProyectoInge1/Views/ReqFuncional/Create.cshtml
@@ -80,7 +80,7 @@
         <div class="form-group">
             <label class="control-label col-md-2">Fuente:</label>
             <div class="col-md-10">
-                @{
+              @*  @{
                     var UserProyectList = Model.listaUsuario;
                     var UserList = Model.UsuariosSistema;
                     foreach (var userProj in UserProyectList)
@@ -92,12 +92,12 @@
                                 <option value=user.cedula>
                                     @Html.DropDownListFor(model => model.Requerimientos.fuente, new[] { new SelectListItem() { Text = user.nombre.ToString() + " " + user.apellidos.ToString(), Value = user.cedula } }, "--Fuente no asignada--", new { @class = "form-control" })
                                 </option>
-                                    @* @Html.EditorFor(usr => user.nombre, new { htmlAttributes = new { @class = "form-control", @readonly = true } })*@
+                                    @* @Html.EditorFor(usr => user.nombre, new { htmlAttributes = new { @class = "form-control", @readonly = true } })
                             }
                         }
 
                     }
-                }
+                }*@
             </div>
         </div>
         <div class="form-group">
